2000-01-22  Roland McGrath  <roland@baalperazim.frob.com>

	* nonsugid.c (get_nonsugid_ids): Remove saved set IDs from available
	sets before merging effective sets.

1999-11-20  Roland McGrath  <roland@baalperazim.frob.com>

	* storeinfo.c (print_store: pstr): Add const to parameter type.

1999-11-19  Roland McGrath  <roland@baalperazim.frob.com>

	* mount.c: New file.
	* mount.sh: File removed.
	* Makefile (special-targets): Remove mount.
	(SRCS): mount.sh -> mount.c
	(mount): Add deps on ../sutils/fstab.o, ../sutils/clookup.o,
	libfshelp and libports.
	(../sutils/fstab.o ../sutils/clookup.o): Rule to build in ../sutils.

1999-11-18  Roland McGrath  <roland@baalperazim.frob.com>

	* vmstat.c (BADVAL): New macro.
	(SWAP_FIELD): New macro.  This properly takes care of exciting C
	type promotion rules to properly indicate errors.
	(get_swap_size, get_swap_free, get_swap_active): Replace definitions
	with ones using SWAP_FIELD macro.
	(ensure_def_pager_info): Give an error message for lack of a default
	pager; check only once.

1999-09-23  Mark Kettenis  <kettenis@gnu.org>

	* login.c (main): Pass controlling terminal ID port to the child.

1999-09-19  Roland McGrath  <roland@baalperazim.frob.com>

	* w.c (add_utmp_procs): Ignore entries whose ut_type is not
	LOGIN_PROCESS or USER_PROCESS, or whose ut_line is empty.

1999-08-10  Thomas Bushnell, BSG  <tb@mit.edu>

	* portinfo.c: Correct documentation for (currently implemented)
	--target-send and --target-send-once options.  Reported by Marcus
	Brinkmann (Marcus.Brinkmann@ruhr-uni-bochum.de).

1999-07-23  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (targets): Remove freeauth, added accidentally.

1999-07-17  Roland McGrath  <roland@baalperazim.frob.com>

	* rpctrace.c (rewrite_right): If we see our own wrapper right,
	unwrap and replace it with the original send right.
	(trace_and_forward): Remove vm_map special case.

	* rpctrace.c: Mostly rewritten.  Now mostly working with skeletal
	functionality.
