@@ -1,2 +1,0 @@
-#define SU
-#include "setauth.c"
